--- a/组件12/prop10-2.html
+++ b/组件12/prop10-2.html
@@ -26,9 +26,9 @@
 <script>
     // 组件
 	Vue.component('my-comp', {
-		//inheritAttrs: false,
-		props: ['dataTitle'], // 注销此句，data-title="learn vue" 会显示在html元素中，此时代表非 Prop 的特性
-        template: '<div>我是组件 </div>'
+		inheritAttrs: false,  //如果注销此句（同时下一句注销），data-title="learn vue" 会显示在html元素中
+		//props: ['dataTitle'], // 注销此句，data-title="learn vue" 会显示在html元素中，此时代表非 Prop 的特性 ; 如果
+        template: '<div>我是组件2 </div>'
     });
     new Vue({
         el: '#app'
