--- a/路由/路由参数2.html
+++ b/路由/路由参数2.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
+
 <body>
     <div id="app">
         <h1>Hello App!</h1>
@@ -15,18 +17,35 @@
             <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
             <router-link to="/user/foo">Go to Foo</router-link>
             <router-link to="/user/bar">Go to Bar</router-link>
+            <router-link to="/user/test?name='haha'">Go to test</router-link>
         </p>
         <!-- 路由出口 -->
         <!-- 路由匹配到的组件将渲染在这里 -->
         <router-view></router-view>
     </div>
 </body>
-<script >
+<script>
     //  路由参数
     //  通过对象 $route.params 来获取参数
 
     const User = {
-        template: '<div>User {{ $route.params.id }}</div>'
+        template: "<div>User {{ $route.params.id }} <button @click='goBack'>返回</button>  </div>",
+        watch: {
+            "$route"(to, from) {
+                console.log(to);
+                console.log(from);
+                console.log(this.$route === to); //true
+                console.log(this.$router)
+            }
+        },
+        methods: {
+            goBack() {
+                window.history.length > 1
+                    ? this.$router.go(-1)
+                    : this.$router.push('/')
+            }
+        }
+
     }
 
     const router = new VueRouter({
@@ -36,7 +55,8 @@
         ]
     })
     const app = new Vue({
-        router:router
+        router: router
     }).$mount('#app')
 </script>
+
 </html>
