--- a/路由/路由1.html
+++ b/路由/路由1.html
@@ -15,8 +15,9 @@
             <!-- 使用 router-link 组件来导航. -->
             <!-- 通过传入 `to` 属性指定链接. -->
             <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
-            <router-link to="/foo">Go to Foo</router-link>
-            <router-link to="/bar">Go to Bar</router-link>
+            <router-link :to="'/foo'">Go to Foo</router-link>
+            <router-link to="/bar">Go to Bar too---与下方等效&nbsp;&nbsp;</router-link>
+            <router-link :to="'/bar'">Go to Bar</router-link>
         </p>
         <!-- 路由出口 -->
         <!-- 路由匹配到的组件将渲染在这里 -->
@@ -24,9 +25,9 @@
     </div>
 </body>
 <script>
-    const Foo = { template: '<div>foo1111111</div>' }
+    const Foo = { template: '<div>foo</div>' }
 
-    const Bar = { template: '<div>bar1111111</div>' }
+    const Bar = { template: '<div>bar</div>' }
 
     // 2. 定义路由
     // 每个路由应该映射一个组件。 其中"component" 可以是
