--- a/组件练习13/弹窗组件2.html
+++ b/组件练习13/弹窗组件2.html
@@ -104,6 +104,7 @@
                 }
             },
             mounted() {
+                console.log(this.node)
                 this.node = document.querySelector('.modal-container')
             },
             methods: {
