--- a/路由/命名路由5.html
+++ b/路由/命名路由5.html
@@ -30,7 +30,7 @@
     ]
 
     const router = new VueRouter({
-        routes:routes // (缩写) 相当于 routes: routes
+        routes  // (缩写) 相当于 routes: routes
     });
 
     const app = new Vue({
