--- a/路由/动态路由2-2.html
+++ b/路由/动态路由2-2.html
@@ -14,6 +14,9 @@
         <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
         <router-link to="/user/foo">Go to Foo</router-link>
         <router-link to="/user/bar">Go to Bar</router-link>
+        <router-link to="/user">Go to user</router-link>
+        <router-link to="/user#qaz">Go to user</router-link>
+        <router-link to="/user?to=foo">Go to user</router-link>
         <router-link to="/notfound">任意</router-link>
     </p>
     <!-- 路由出口 -->
@@ -40,9 +43,10 @@
     const router = new VueRouter({
         routes:[
             //// 动态路径参数 以冒号开头
-            {path:"/user/:id",component:User},
-            {path:"/*",component:All},  // 谁先定义的，谁的优先级就最高：尝试替换  path:"/*" 和 path:"/notfound" 的位置
+            {path:"/user/:id?",component:User},  //  /user  /user#qaz  /user?to=foo 均匹配
             {path:"/notfound",component:Notfound},
+            {path:"/*",component:All},  // 谁先定义的，谁的优先级就最高：尝试替换  path:"/*" 和 path:"/notfound" 的位置
+            
 
         ]
     });
