--- a/路由/命名视图6.html
+++ b/路由/命名视图6.html
@@ -16,6 +16,7 @@
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
+    <router-view></router-view>
     <router-view name="a"></router-view>
     <router-view name="b"></router-view>
 
@@ -44,7 +45,7 @@
     ]
 
     const router = new VueRouter({
-        routes:routes // (缩写) 相当于 routes: routes
+        routes  // (缩写) 相当于 routes: routes
     });
 
     const app = new Vue({
