--- a/路由/导航路由4.html
+++ b/路由/导航路由4.html
@@ -8,24 +8,25 @@
 </head>
 <body>
     <div id="app">
-        <h1 @click="alert(this.$router)">Hello App!</h1>
+        <h1 >Hello App!</h1>
         <p>
             <!-- 使用 router-link 组件来导航. -->
             <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
             <router-link  to="/user/foo">Go to Foo</router-link>
             <router-link  to="/user/bar">Go to Bar</router-link>
-            <a @click="gotoFoo">Go to Foo</a>
-            <a @click="console.log(this.$router)">Go to Bar</a>
+            <button @click="gotoFoo">Go to Foo</button>
+            <button @click="log(this)">log this-----window</button>
         </p>
         <!-- 路由出口 -->
         <!-- 路由匹配到的组件将渲染在这里 -->
         <router-view></router-view>
         <div>
             <hr>
-            <a @click="gotoFoo">Go to Foo</a>
-            <a @click="gotoBar">Go to Bar</a>
-            <a @click="goBack">向后</a>
-            <a @click="goForward">向前</a>
+            <button @click="gotoFoo">Go to Foo</button>
+            <button @click="gotoBar">Go to Bar</button>
+            <button @click="goBack">向后</button>
+            <button @click="goForward">向前</button>
+            <button @click="logRoute">log router + route</button>
         </div>
     </div>
 </body>
@@ -38,7 +39,7 @@
     ]
 
     const router = new VueRouter({
-        routes:routes // (缩写) 相当于 routes: routes
+        routes  // (缩写) 相当于 routes: routes
     })
 
     const app = new Vue({
@@ -55,7 +56,15 @@
             },
             goForward(){
                 router.go(1);
-                console.log(router === this.$router)
+                console.log(router === this.$router);
+                console.log(router === this.$router);
+            },
+            log(mes){
+                console.log(mes);
+            },
+            logRoute(){
+                console.log(this.$router);
+                console.log(this.$route)
             }
 
         }
