--- a/vue自定义指令/directive6-拖拽改进.html
+++ b/vue自定义指令/directive6-拖拽改进.html
@@ -126,7 +126,7 @@
 
     </div>
 </body>
-<script src="../vue.js"></script>
+<script src="https://unpkg.com/vue/dist/vue.js"></script>
 <script type="text/javascript">
 
 
@@ -135,9 +135,9 @@
 
     var dragComp = {
         template: `  <div v-if="visible" >
-                    <div class="modal-container" id="my_dialog_box" v-drag>
+                    <div class="modal-container" id="my_dialog_box" v-drag >
                     <!-- 标题 -->
-                    <div class="modal-header">
+                    <div class="modal-header" >
                         {{title}}
                         <span class="my_dialog_close" @click="cancel">X</span>
                     </div>
@@ -167,11 +167,12 @@
     
     Vue.directive('drag', {   
         bind(el, binding, vnode) {    // 只调用一次，指令第一次绑定到元素时调用。   
-                    vnode = vnode.elm
+                    vnode = vnode.elm;
+                    vnode.isCanMove =false;
                     el.onmousedown = ((event) => {
-                        // if (event.target.className !== "my_dialog_title") {
-                        //     return
-                        // }
+                        if (event.target.className !== "modal-header") {
+                             return
+                         }
                         // (clientX, clientY)点击位置距离当前可视区域的坐标(x，y)
                         // offsetLeft, offsetTop 距离上层或父级的左边距和上边距
 
@@ -179,7 +180,10 @@
 
                         // 获取鼠标在弹窗中的位置
                         let mouseX = event.clientX - vnode.offsetLeft
-                        let mouseY = event.clientY - vnode.offsetTop
+                        let mouseY = event.clientY - vnode.offsetTop;
+
+ 
+
 
                         // 绑定移动和停止函数
                         document.onmousemove = ((event) => {
@@ -211,7 +215,10 @@
                             }
                             // 赋值移动
                             vnode.style.left = left + 'px'
-                            vnode.style.top = top + 'px'
+
+                            vnode.style.top = top + 'px';
+                            console.log(vnode.style.left)
+
                         })
                         document.onmouseup = (() => {
                             document.onmousemove = document.onmouseup = null
