--- a/6 Class 与 Style 绑定/class1_对象语法.html
+++ b/6 Class 与 Style 绑定/class1_对象语法.html
@@ -5,10 +5,10 @@
     <title>Title</title>
     <style>
         .active{
-            background-color: red;
+            background-color: blue;
         }
         .text-danger{
-            border: solid blue 2px;
+            border: solid red 2px;
         }
     </style>
     <script src ="../vue.js"></script>
