--- a/6 Class 与 Style 绑定/class2_数组语法.html
+++ b/6 Class 与 Style 绑定/class2_数组语法.html
@@ -5,13 +5,13 @@
     <title>Title</title>
     <style>
         .active{
-            background-color: red;
+            background-color: blue;
         }
         .text-danger{
-            font-weight: bolder;
+            border: solid red 3px;
         }
         .pre-dangerClass{
-            border: solid yellow 3px;
+            font-size: 30px;
         }
 
     </style>
