--- a/6 Class 与 Style 绑定/style3.html
+++ b/6 Class 与 Style 绑定/style3.html
@@ -22,6 +22,7 @@
         <ul>
             style 内联样式语法 1： 对象
             <div v-bind:style="styleObj1">test1</div>
+            <div v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }">test11</div>
         </ul>
     </div>
     <div id="app2">
@@ -36,8 +37,8 @@
         <ul>
             <li style="font-size: 24px;">li-24px</li>
             // 数组语法：font-size 写为fontSize
-            <div v-bind:style="[styleObj3,{ fontSize:'24px'}]">test2</div>
-
+            <div v-bind:style="[styleObj3,{ fontSize:'24px'}]">test3</div>
+            <div v-bind:style="[baseStyles, overridingStyles]">test33</div>
         </ul>
     </div>
 <script>
@@ -48,7 +49,9 @@
         data:{
             styleObj1: {
                 background:"yellow"
-            }
+            },
+            activeColor: 'red',
+            fontSize: 30
         }
     });
 
@@ -59,19 +62,26 @@
             errorClass:"pre-dangerClass",
         }
     });
+
+
     var app3 = new Vue({
         el:"#app3",
         data:{
             styleObj3:{
                 background:"red"
+            },
+            baseStyles:{
+                background:"blue",
+                "font-size":"40px"
+            },
+            overridingStyles:{
+                "text-decoration":"line-through"
             }
         }
     });
-/*
-    样式可以使用数组方式，数组中可以使用变量（如上 app），数组中可以使用对象（如上 app2）；
-    疑惑：使用变量的方式，变量名如果带有 - 特殊字符，要使样式生效，在该变量名和类名保持一致，变量值任意
 
-    */
+
+
 
 </script>
 </body>
