--- a/8 列表渲染/v-for-template10.html
+++ b/8 列表渲染/v-for-template10.html
@@ -5,12 +5,20 @@
     <title>Title</title>
     <script src ="../vue.js"></script>
 </head>
+<style>
+    .active{
+        background-color: blue;
+    }
+</style>
 <body>
 <div id="app">
     <ul>
-        // template 不会渲染出来，好像不存在
+        <!--  template 不会渲染出来，好像不存在 -->
         <template v-for="item in items">
-            <li>{{ item.msg }}</li>
+            <label>内容：</label>
+            <li>{{ item.name }}</li>
+            <li v-bind:class="{active:isActive}">{{ item.age }}</li>
+            <a :href="url">url</a> <br>
         </template>
     </ul>
 </div>
@@ -18,12 +26,16 @@
     new Vue({
         el:"#app",
         data:{
+            isActive:true,
+            url:"http://www.baidu.com",
             items:[
                 {
-                    msg: 'John11'
+                    name: 'John11',
+                    age:21
                 },
                 {
-                    msg: 'John22'
+                    name: 'John22',
+                    age:22
                 }
             ]
         }
