add event notes

--- a/9 事件处理/事件-内联处理器中的方法2.html
+++ b/9 事件处理/事件-内联处理器中的方法2.html
@@ -16,8 +16,8 @@
         //内联 JavaScript 语句中调用方法,注意，方法不带() , methods中方法默认有参数event
         <button v-on:click="say">点我</button>
          
-        <!--这种写法，无法得到event
-        <button v-on:click="say()">点我</button>-->
+        <!--这种写法，无法得到event-->
+        <button v-on:click="say()">点我</button>
     </div>
 
     <div id="app3">
