--- a/9 事件处理/事件修饰符passive-5.html
+++ b/9 事件处理/事件修饰符passive-5.html
@@ -63,7 +63,13 @@
             }
         })
  
-
+/*      https://blog.csdn.net/dj0379/article/details/52883315
+        https://www.cnblogs.com/ziyunfei/p/5545439.html
+        passived作用：
+        passived主要用于优化浏览器页面滚动的性能，让页面滚动更顺滑 .BetterScroll：可能是目前最好用的移动端滚动插件 
+        
+        
+        */
     </script>
 </body>
 </html>
