--- a/9 事件处理/事件修饰符-4.html
+++ b/9 事件处理/事件修饰符-4.html
@@ -20,6 +20,11 @@
 </head>
 <body>
     <div id="app1">
+        // @click.prevent.self 
+        点击div.son标签，会输出3, 1。不但阻止输出 2 ，还阻止了a的默认跳转。
+        因为点击的时候会**先prevent**，阻止默认事件，阻止了跳转;然后判断是否是self，因为点击到的是div.son标签，所以不是self。但是a标签是self,阻止输出2 。（https://www.oschina.net/question/1785591_2273843?sort=default）
+ 
+
         click.prevent.self :会阻止所有的点击(下例子中，点击 div.son ,a标签既不会跳转，a标签也不输出信息)，输出 3 1
         <div @click="say(1)" class="parent">
             <a href="http://w3school.com.cn/" @click.prevent.self="say(2)">a标签
@@ -29,6 +34,11 @@
     </div>
     <hr>
     <div id="app2">
+        // @click.self.prevent
+        点击div标签，会输出3, 1,跳转到/#。只阻止了输出2 。
+        因为会先判断self，点击到div3.son，不是self，所以不会执行click事件，就不会执行阻止默认事件，也不会输出2，所以可以跳转但没有输出2。（https://www.oschina.net/question/1785591_2273843?sort=default）
+
+
         click.self.prevent 只会阻止对元素自身的点击(下例子中，点击 div.son ,a标签会跳转，a标签不输出信息)，输出 3 1
         <div @click="say(1)" class="parent">
             <a href="http://w3school.com.cn/" @click.self.prevent="say(2)">a标签
