--- a/10 表单绑定/双向绑定(v-model)-单选按钮4.html
+++ b/10 表单绑定/双向绑定(v-model)-单选按钮4.html
@@ -9,7 +9,7 @@
 
     <div id="app">
         一组 单选框采用相同 的v-model 名称，则即使它们没有相同的name，也被认为是一组（只能选中一个） <br>
-        <input type="radio" value="One" id="one" v-model="picked"  >
+        <input type="radio" value="one" id="one" v-model="picked"  >
         <label for="one">One</label>
         <br>
         v-model 会忽略所有表单元素的 value、checked、selected 特性的初始值，如下单选框设置checked，但无效：<br>
