--- a/10 表单绑定/双向绑定(v-model)-复选框3.html
+++ b/10 表单绑定/双向绑定(v-model)-复选框3.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <script src ="../vue.js"></script>
-</head>
-<body>
-
+    <script src="../vue.js"></script>
+  </head>
+  <body>
     <div id="app">
-         checked  特性的初始值 由于v-model 的存在被忽略 <br>
-         单个复选框，绑定到 **布尔值**
-        <div>
-            <input v-model="isChecked" type="checkbox" checked >
-            <p>isChecked is: {{ isChecked }}</p>
-        </div>
-        多个复选框，绑定到同一个**数组**： [ "John", "Mike" ]
-        <div  >
-            <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
-            <label for="jack">Jack</label>
-            <input type="checkbox" id="john" value="John" v-model="checkedNames">
-            <label for="john">John</label>
-            <input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
-            <label for="mike">Mike</label>
-            <br>
-            <span>Checked names: {{ checkedNames }}</span>
-        </div>
+      checked 特性的初始值 由于v-model 的存在被**忽略** <br />
+      单个复选框，绑定到 **布尔值**
+      <div>
+        <input v-model="isChecked" type="checkbox" checked />
+        <p>isChecked is: {{ isChecked }}</p>
+      </div>
+      多个复选框，绑定到同一个**数组**,如： [ "John", "Mike" ]
+      <div>
+        <input type="checkbox" id="jack" value="Jack" v-model="checkedNames" />
+        <label for="jack">Jack</label>
+        <input type="checkbox" id="john" value="John" v-model="checkedNames" />
+        <label for="john">John</label>
+        <input type="checkbox" id="mike" value="Mike" v-model="checkedNames" />
+        <label for="mike">Mike</label>
+        <br />
+        <span>Checked names: {{ checkedNames }}</span>
+      </div>
     </div>
     <script>
-        var app = new Vue({
-            el:"#app",
-            data:{
-                isChecked:false,
-                checkedNames:["John","Mike"]
-            }
-        })
+      var app = new Vue({
+        el: "#app",
+        data: {
+          isChecked: false,
+          checkedNames: ["John", "Mike"],
+        },
+      });
     </script>
-</body>
-
+  </body>
 </html>
