--- a/10 表单绑定/双向绑定(v-model)1.html
+++ b/10 表单绑定/双向绑定(v-model)1.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <script src ="../vue.js"></script>
-</head>
-<body>
+    <script src="../vue.js"></script>
+  </head>
+  <body>
     <p>
-        v-model 会忽略所有表单元素的 value、checked、selected 特性的初始值, <br>
-        而总是将 Vue 实例的数据作为数据来源。你应该通过 JavaScript 在组件的 data 选项中声明初始值
-
+      v-model 会忽略所有表单元素的 value、checked、selected 特性的初始值, <br />
+      而总是将 Vue 实例的数据作为数据来源。你应该通过 JavaScript 在组件的 data
+      选项中声明初始值
     </p>
     <div id="app">
-        <input v-model="message" placeholder="edit me" value="init value">
+      <div>
+        没有使用 v-model，input的value属性生效
+        <input placeholder="edit me no v-model" value="init value" /><br />
+
+        使用 v-model，input的value属性无效
+        <input v-model="message" placeholder="edit me" value="init value" />
         <p>Message is: {{ message }}</p>
+      </div>
+      <hr />
+      <div>
+        <input type="checkbox" id="jack" value="Jack" checked />
+        <label for="jack">Jack</label>
+
+        使用 v-model，input_checkbox的checked属性无效<br>
+        <input
+          type="checkbox"
+          id="john"
+          value="John"
+          v-model="checkedNames"
+          checked
+        />
+        <label for="john">John</label>
+      </div>
     </div>
     <script>
-        var app = new Vue({
-            el:"#app",
-            data:{
-                message:"hello"
-            }
-        })
+      var app = new Vue({
+        el: "#app",
+        data: {
+          message: "",
+          checkedNames: "",
+        },
+      });
     </script>
-</body>
-
+  </body>
 </html>
