--- a/4 模板语法/插值2(v-text-html).html
+++ b/4 模板语法/插值2(v-text-html).html
@@ -8,8 +8,8 @@
 <body>
     <div id="app">
         <span >Message--{{ }} 形式绑定: {{ msg }}</span> <br>
-        <label >v-text 形式绑定:</label><span v-text="msg">v-text-Message: </span><br>
-        <label >v-html 形式绑定:</label><span v-html="msg">v-html-Message: </span>
+        <label >v-text 形式绑定:</label><span v-text="msg">这里的文字会被替换，不显示出来</span><br>
+        <label >v-html 形式绑定:</label><span v-html="msg">这里的文字会被替换，不显示出来</span>
     </div>
 
 <!--
