--- a/5 计算属性和侦听器/计算属性3-2.html
+++ b/5 计算属性和侦听器/计算属性3-2.html
@@ -52,7 +52,7 @@
 /*
     控制台进行如下调试：
     app.age = 100;
-    methFullname 执行（方法），而 comhFullname 不执行(计算属性)
+    methFullname 执行（方法），控制台输出 methFullname  ，而 comhFullname 不执行(计算属性)
     */
 
 </script>
