--- a/4 模板语法/特性3(v-bind).html
+++ b/4 模板语法/特性3(v-bind).html
@@ -11,11 +11,13 @@
         <p>注意：布尔特性的属性，它们的存在即暗示为 true
             在下面的按钮这个例子中：
             如果 isButtonDisabled 的值是 null、undefined 或 false，
-            则 disabled 特性甚至不会被包含在渲染出来的  button  元素中。
+            则 disabled 特性甚至不会被包含在渲染出来的  button  元素中
+            （备注：如果显示了出来，则该按钮就 disabled 了，即使disabled = false也不行）。
         </p>
         <button v-bind:disabled="isButtonDisabled">v-text-Message: </button><br>
         <input type="checkbox" v-bind:checked="isChecked">足球</input>
     </div>
+    注意：布尔特性的属性，它们的存在即暗示为 true，参见下方 纯html示例：
     <div>
         <button disabled>纯 html disabled </button><br> 
         <button disabled="disabled">纯 html disabled="disabled"  </button><br> 
