--- a/6 Class 与 Style 绑定/class1_对象语法.html
+++ b/6 Class 与 Style 绑定/class1_对象语法.html
@@ -73,7 +73,7 @@
         computed:{
             classObj:function(){
                 return {
-                    active:this.isActive &&  this.error,
+                    active:this.isActive ||  this.error,
                     "text-danger":this.error && this.error.type==="fatal"
                 }
             }
