--- a/8 列表渲染/指令6(v-for).html
+++ b/8 列表渲染/指令6(v-for).html
@@ -35,7 +35,7 @@
         <ul id="ul_24" >
 
             <li v-for="(value,key,index ) in object">
-               键：{{ key}} --- 值：{{ value }}---序号{{index}}
+               键：{{ key}} --- 值：{{ value }}---序号{{index+1}}
             </li>
         </ul>
     </div>
