--- a/11组件基础/组件开始(组件在vue实例中)1_2.html
+++ b/11组件基础/组件开始(组件在vue实例中)1_2.html
@@ -14,7 +14,7 @@
       <div>
         <h2>我是子组件(显示)</h2>
         <p>我是子组件的内容!(显示)</p>
-        <button v-show="isShow">按钮(不会显示)</button>
+        <button v-show="isShow">按钮(不会显示---子组件cpn-component的isShow 为false)</button>
       </div>
     </template>
 
