--- a/12组件/组件prop不继承？2-4.html
+++ b/12组件/组件prop不继承？2-4.html
@@ -24,10 +24,11 @@
 
  
 <script>
+    https://blog.csdn.net/qq_42186457/article/details/116236208
     // 组件
 	Vue.component('my-comp', {
-		inheritAttrs: false,  //如果注销此句（同时下一句注销），data-title="learn vue" 会显示在html元素中
-		//props: ['dataTitle'], // 注销此句，data-title="learn vue" 会显示在html元素中，此时代表非 Prop 的特性 ; 如果
+		//inheritAttrs: false,  //如果注销此句（同时下一句注销），data-title="learn vue" 会显示在html元素中
+		//props: ['dataTitle'], // 注销此句，data-title="learn vue" 会显示在html元素中，此时代表非 Prop 的特性 ;  
         template: '<div>我是组件2 </div>'
     });
     new Vue({
